<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rakeshgangwar.videokenassignment.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/text_video_url"
            android:hint="@string/video_url"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri" />
        <com.google.android.youtube.player.YouTubePlayerView
            android:id="@+id/player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:onClick="takeAudioNote"
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:paddingTop="15dp"
                        android:text="@string/record_note"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <ImageButton
                        android:paddingTop="15dp"
                        android:id="@+id/mic"
                        android:paddingEnd="20dp"
                        android:paddingStart="10dp"
                        android:background="@null"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_mic_black_24dp"
                        android:contentDescription="@string/microphone" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:onClick="clearEverything"
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:paddingTop="15dp"
                        android:id="@+id/clearAll"
                        android:background="@null"
                        android:paddingEnd="10dp"
                        android:paddingStart="20dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_delete_forever_black_24dp"
                        android:contentDescription="@string/clear_all" />
                    <TextView
                        android:paddingTop="15dp"
                        android:text="@string/delete_all_notes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:onClick="showAllNotes"
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:paddingTop="15dp"
                        android:text="@string/show_all_notes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <ImageButton
                        android:paddingTop="15dp"
                        android:id="@+id/showAll"
                        android:paddingEnd="20dp"
                        android:paddingStart="10dp"
                        android:background="@null"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_comment_black_24dp"
                        android:contentDescription="@string/microphone" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:onClick="showVideoNotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:paddingTop="15dp"
                        android:id="@+id/showVideoNotes"
                        android:background="@null"
                        android:paddingEnd="10dp"
                        android:paddingStart="20dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_comment_black_24dp"
                        android:contentDescription="@string/clear_all" />
                    <TextView
                        android:paddingTop="15dp"
                        android:text="@string/show_video_notes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <TextView
            android:paddingTop="30dp"
            android:text="@string/video_notes"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ListView
            android:id="@+id/listOfNotes"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>



</android.support.constraint.ConstraintLayout>
